--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Eaccounting",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Simple online accounting tool",
   "dependencies": {},
   "devDependencies": {
@@ -8,6 +8,7 @@
     "grunt-injector": "~0.5.2",
     "grunt-contrib-jshint": "~0.10.0",
     "http-server": "^0.6.1",
+    "grunt-php": "~1.2.0",
     "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
     "karma": "~0.10.4",
@@ -23,10 +24,10 @@
     "karma-script-launcher": "~0.1.0"
   },
   "scripts": {
-    "start": "http-server app/ -p 4000",
+    "start": "http-server app/ -p 4000 & grunt php:dev:keepalive &",
     "test": "./scripts/test.sh",
     "postinstall": "bower install",
-    "stop": "killall node http-server"
+    "stop": "killall node http-server & killall php"
   },
   "repository": {
     "type": "git",
